--- a/preprocess.qmd
+++ b/preprocess.qmd
@@ -16,6 +16,7 @@ format:
       theme: cosmo               
       toc-depth: 3 
       language: de    
+      css: styles.css             
       lang: de          
       number-sections: true      
       self-contained: true   
@@ -32,6 +33,7 @@ format:
       anchor-sections: true     
       smooth-scroll: true       
 ---
+
 
 # Einleitung
 
